Fixed autostart files

--- a/autostart/fedora-setup.desktop
+++ b/autostart/fedora-setup.desktop
@@ -1,5 +1,5 @@
 [Desktop Entry]
 Name=Start Fedora setup script
 Type=Application
-Exec=HOME/Fedora-Setup-Script/setup.sh
+Exec=HOME/setup.sh
 Terminal=true
